--- a/bgp/concepts/pom.xml
+++ b/bgp/concepts/pom.xml
@@ -41,12 +41,12 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-binding</artifactId>
-            <version>${yangtools.version}</version>
+            <version>0.5.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>yang-common</artifactId>
-            <version>${yangtools.version}</version>
+            <version>0.5.7-SNAPSHOT</version>
         </dependency>
 
         <!--
@@ -66,7 +66,7 @@
 			<plugin>
                <groupId>org.opendaylight.yangtools</groupId>
                <artifactId>yang-maven-plugin</artifactId>
-               <version>${yangtools.version}</version>
+               <version>0.5.7-SNAPSHOT</version>
                <executions>
                    <execution>
                        <goals>
@@ -92,7 +92,7 @@
                    <dependency>
                        <groupId>org.opendaylight.yangtools</groupId>
                        <artifactId>maven-sal-api-gen-plugin</artifactId>
-                       <version>${yangtools.version}</version>
+                       <version>0.5.7-SNAPSHOT</version>
                        <type>jar</type>
                    </dependency>
                </dependencies>
