--- a/bgp/linkstate/pom.xml
+++ b/bgp/linkstate/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>ietf-inet-types</artifactId>
+            <version>2010.09.24-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 	<build>
