--- a/bgp/parser-api/pom.xml
+++ b/bgp/parser-api/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>ietf-inet-types</artifactId>
+            <version>2010.09.24-SNAPSHOT</version>
+        </dependency>
 	</dependencies>
 
 	<build>
