--- a/bgp/parser-mock/pom.xml
+++ b/bgp/parser-mock/pom.xml
@@ -60,6 +60,12 @@
             <version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>ietf-inet-types</artifactId>
+            <version>2010.09.24-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
