--- a/bgp/rib-impl/pom.xml
+++ b/bgp/rib-impl/pom.xml
@@ -69,6 +69,21 @@
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-common</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
