--- a/bgp/util/pom.xml
+++ b/bgp/util/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>ietf-inet-types</artifactId>
+            <version>2010.09.24-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
