--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -19,14 +19,24 @@
 	</prerequisites>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.opendaylight.bgpcep</groupId>
-			<artifactId>util</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <dependency>
 			<groupId>io.netty</groupId>
-			<artifactId>netty-all</artifactId>
+			<artifactId>netty-buffer</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-common</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport</artifactId>
             <version>${netty.version}</version>
 		</dependency>
 		<dependency>
