--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -34,6 +34,16 @@
 			<artifactId>util</artifactId>
             <version>${project.version}</version>
 		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
