--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -39,11 +39,41 @@
 			<artifactId>concepts</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-codec</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-common</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.opendaylight.yangtools.model</groupId>
+            <artifactId>ietf-inet-types</artifactId>
+            <version>2010.09.24-SNAPSHOT</version>
+        </dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
