--- a/pcep/testtool/pom.xml
+++ b/pcep/testtool/pom.xml
@@ -39,6 +39,21 @@
 			<artifactId>pcep-impl</artifactId>
             <version>${project.version}</version>
 		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-common</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-transport</artifactId>
+            <version>${netty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
