--- a/bgp/concepts/pom.xml
+++ b/bgp/concepts/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
-            <version>2010.09.24-SNAPSHOT</version>
+            <version>${ietf.types.version}</version>
         </dependency>
 	</dependencies>
 
@@ -106,7 +106,8 @@
 					<instructions>
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Export-Package>
-							org.opendaylight.protocol.bgp.concepts
+                            org.opendaylight.protocol.bgp.concepts,
+                            org/opendaylight.yang.gen.*
 						</Export-Package>
 						<Import-Package>
 							com.google.common.base,
