--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -69,18 +69,13 @@
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-inet-types</artifactId>
-            <version>2010.09.24-SNAPSHOT</version>
+            <version>${ietf.types.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.yangtools.model</groupId>
             <artifactId>ietf-topology</artifactId>
             <version>2013.07.12-SNAPSHOT</version>
         </dependency>
-        <!--dependency>
-            <groupId>org.opendaylight.controller.model</groupId>
-            <artifactId>ietf-yang-types</artifactId>
-            <version>2010.09.24-SNAPSHOT</version>
-        </dependency-->
 	</dependencies>
 
 	<build>
