--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 		<surefire.version>2.15</surefire.version>
 
 		<yangtools.version>0.5.9-SNAPSHOT</yangtools.version>
-		<code.generator.version>0.5.8.1</code.generator.version>
+		<code.generator.version>0.6.0-SNAPSHOT</code.generator.version>
 		<ietf.types.version>2010.09.24.1</ietf.types.version>
 	</properties>
 	<prerequisites>
