--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 		<slf4j.version>1.7.2</slf4j.version>
 		<surefire.version>2.15</surefire.version>
 
-		<yangtools.version>0.5.8-SNAPSHOT</yangtools.version>
+		<yangtools.version>0.5.9-SNAPSHOT</yangtools.version>
 		<code.generator.version>0.5.8.1</code.generator.version>
 		<ietf.types.version>2010.09.24.1</ietf.types.version>
 	</properties>
@@ -203,11 +203,11 @@
 	</repositories>
 
 	<pluginRepositories>
-		<!--pluginRepository>
-			<id>opendaylight-releaset</id>
+		<pluginRepository>
+			<id>opendaylight-release</id>
 			<name>opendaylight-release</name>
 			<url>${nexusproxy}/repositories/opendaylight.release/</url>
-		</pluginRepository-->
+		</pluginRepository>
 		<pluginRepository>
 			<id>opendaylight-snapshot</id>
 			<name>opendaylight-snapshot</name>
