--- a/pcep/api/pom.xml
+++ b/pcep/api/pom.xml
@@ -140,6 +140,8 @@
                            org.opendaylight.protocol.pcep.object,
                            org.opendaylight.protocol.pcep.subobject,
                            org.opendaylight.protocol.pcep.tlv,
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.message.rev131007.*,
+                           org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.pcep.types.rev131005.*,
                        </Export-Package>
                        <Import-Package>
                            org.opendaylight.protocol.concepts,
