--- a/bgp/parser-impl/pom.xml
+++ b/bgp/parser-impl/pom.xml
@@ -46,6 +46,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-parser-spi</artifactId>
+            <version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-util</artifactId>
             <version>${project.version}</version>
 		</dependency>
