--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -52,8 +52,9 @@
         <surefire.version>2.15</surefire.version>
 
         <yangtools.version>0.5.9-SNAPSHOT</yangtools.version>
-        <controller.config.version>0.2.3-SNAPSHOT</controller.config.version>
         <yang.binding.version>0.6.0-SNAPSHOT</yang.binding.version>
+
+        <controller.config.version>0.2.3-SNAPSHOT</controller.config.version>
         <ietf.types.version>2010.09.24.2-SNAPSHOT</ietf.types.version>
         <ietf.topology.version>2013.10.21.0-SNAPSHOT</ietf.topology.version>
     </properties>
@@ -64,11 +65,6 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>concepts</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>framework</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -93,7 +89,8 @@
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>mockito-configuration</artifactId>
-                <version>${yangtools.version}</version>
+                <!-- FIXME: change to yangtools.version once it's 0.6.0 -->
+                <version>${yang.binding.version}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -149,6 +146,18 @@
             </dependency>
 
             <!-- Controller infrastructure -->
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
+                <artifactId>protocol-framework</artifactId>
+                <version>0.4.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
+                <artifactId>protocol-framework</artifactId>
+                <version>0.4.0-SNAPSHOT</version>
+                <type>test-jar</type>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.opendaylight.controller</groupId>
                 <artifactId>config-api</artifactId>
