--- a/commons/parent/pom.xml
+++ b/commons/parent/pom.xml
@@ -93,6 +93,12 @@
                 <version>${yang.binding.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+                <scope>test</scope>
+            </dependency>
 
             <!-- Supporting Libraries -->
             <dependency>
@@ -223,8 +229,6 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
