--- a/pcep/ietf-stateful02/pom.xml
+++ b/pcep/ietf-stateful02/pom.xml
@@ -31,6 +31,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-spi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>concepts</artifactId>
         </dependency>
 
